[ESNext] super accesses broken on arrow functions defined as class field https://bugs.webkit.org/show_bug.cgi?id=220558

Reviewed by Darin Adler.

JSTests:

* stress/class-field-arrow-function-using-super.js: Added.

Source/JavaScriptCore:

We need to properly set `isClassContext` for class fields
initialization.

* bytecode/UnlinkedFunctionExecutable.cpp:
(JSC::generateUnlinkedFunctionCodeBlock):


Canonical link: https://commits.webkit.org/232980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271420 268f45cc-cd09-0410-ab3c-d52691b4dbfc